edit footer, colors, text

--- a/index.qmd
+++ b/index.qmd
@@ -1,15 +1,15 @@
 ---
 title: "Guides and Resources for Ocean Data Stewardship"
-page-navigation: false
 ---
 
-# Welcome to Intertidal's page for ocean data resources.
+# H1 Intertidal's page for ocean data resources.
 
 
-## Blurb here about our resources...
+## H2 Blurb here about our resources...
 
 
-### We'll also want to style this with our logo, fonts, and other brand style elements.  
+### H3 We'll also want to style this with our logo, fonts, and other brand style elements.  
 
-This is a body text line. 
+
+Body text: This is a body text line. 
                                                 
