--- a/minimum_metadata.qmd
+++ b/minimum_metadata.qmd
@@ -8,13 +8,14 @@ Metadata describing every dataset, data products, and written article is needed 
 
 ### References used to develop these guidelines
 
-[MEDIN Discovery Metadata Standard](https://medin.org.uk/sites/medin/files/documents/MEDIN_Schema_Documentation_3_1_2_brief.pdf)
-[Creative Commons TASL](https://wiki.creativecommons.org/wiki/Recommended_practices_for_attribution)
+[MEDIN Discovery Metadata Standard](https://medin.org.uk/sites/medin/files/documents/MEDIN_Schema_Documentation_3_1_2_brief.pdf)  
+[Creative Commons TASL](https://wiki.creativecommons.org/wiki/Recommended_practices_for_attribution)  
 
 ### Other metadata resources
-[DCAT-US](https://resources.data.gov/resources/dcat-us/) 
-[EML](https://eml.ecoinformatics.org/)
-[ISO19115-2](https://www.iso.org/obp/ui/#iso:std:iso:19115:-2:ed-2:v1:en)
+
+[DCAT-US](https://resources.data.gov/resources/dcat-us/)   
+[EML](https://eml.ecoinformatics.org/)  
+[ISO19115-2](https://www.iso.org/obp/ui/#iso:std:iso:19115:-2:ed-2:v1:en)  
 
 
 ```{r, echo=FALSE, warning=FALSE, include=FALSE}
@@ -37,7 +38,7 @@ table1[12,2] <- paste0("Name and persistent ID (e.g. ", "<a href=\"","https://ro
 
 TBL <- kbl(table1, booktabs = TRUE, align = ("llccc"), format = "html", escape = FALSE,
            col.names = c("Minimum Metadata", 
-                         "Common-language description of the essential metadata terms.", 
+                         "Common-language description of metadata terms", 
                          "EML", "ISO19115-2", "DCAT-US")) %>% 
        kable_styling(full_width = FALSE, position = "center", fixed_thead = TRUE) %>% 
        add_header_above(header = c(" " = 1, "Description" = 1, "Equivalent fields in common metadata standards" = 3), 
