--- a/index.qmd
+++ b/index.qmd
@@ -12,6 +12,6 @@ conditions, and design solutions. Anyone who works with ocean data and informati
 ocean data stewardship. These are some of the resources  we’ve developed and tested with our 
 partners. Try them out and see how they can support your ocean data stewardship practices.  
 <br>
-To submit feedback, ask questions or suggest additional topics you'd like to see us add,
+To submit feedback, ask questions or suggest additional topics you'd like to see added,
 please [contact us](https://www.intertidalagency.org/contact). 
                                                 
