revise repo table aesthetics

--- a/minimum_metadata.qmd
+++ b/minimum_metadata.qmd
@@ -43,7 +43,7 @@ TBL <- kbl(table1, booktabs = TRUE, align = ("llccc"), format = "html", escape =
        kable_styling(full_width = FALSE, position = "center", fixed_thead = TRUE) %>% 
        add_header_above(header = c(" " = 1, "Description" = 1, "Equivalent fields in common metadata standards" = 3), 
                         align = "l") %>% 
-       # row_spec(row = 0, underline = FALSE, color = "white", background = "#034969") %>% 
+       row_spec(row = 0, underline = FALSE, color = "white", background = "#034969") %>% 
        column_spec(1, width = "12em") %>% 
        column_spec(2, width = "45em") %>% 
        column_spec(3:5, width = "8em") 
