--- a/index.qmd
+++ b/index.qmd
@@ -2,11 +2,12 @@
 title: "Ocean Data Stewardship Resources"
 ---
 
-Welcome to Intertidal's resource home for ocean data stewards!   
+Welcome to Intertidal's resource home for ocean data stewards!
 <br>  
 Data stewardship is central to Intertidal’s work connecting ocean data to action. [Data stewards](https://files.thegovlab.org/Primer-1-Creating-and-Empowering-Chief-Data-Stewards.pdf) are 
 individuals and teams within governments, communities, research groups, nonprofits, and businesses 
-who make data findable, accessible, interoperable, and reusable (aka FAIR). Without ocean data 
+who make data findable, accessible, interoperable, and reusable 
+(aka [FAIR](https://www.go-fair.org/fair-principles/)). Without ocean data 
 stewards, it’s much harder to find and recombine ocean data to make new discoveries, monitor ocean 
 conditions, and design solutions. Anyone who works with ocean data and information can practice 
 ocean data stewardship. These are some of the resources  we’ve developed and tested with our 
