--- a/minimum_metadata.qmd
+++ b/minimum_metadata.qmd
@@ -6,7 +6,7 @@ format: html
 
 Metadata describing every dataset, data product, and written article is needed to ensure that these resources can be found, accessed, and reused. If you are publishing data in a robust repository, these metadata recommendations may be met or exceeded by those of the repository.  If not, these recommendations can give a guide as to what types of information should accompany and dataset or research output.  These essential metadata are meant to apply across all research domains and subject areas, and for all research outputs.  
 
-### References used to develop these guidelines
+### References used to develop these recommendations
 
 [MEDIN Discovery Metadata Standard](https://medin.org.uk/sites/medin/files/documents/MEDIN_Schema_Documentation_3_1_2_brief.pdf)  
 [Creative Commons TASL](https://wiki.creativecommons.org/wiki/Recommended_practices_for_attribution)  
@@ -17,6 +17,7 @@ Metadata describing every dataset, data product, and written article is needed t
 [EML](https://eml.ecoinformatics.org/)  
 [ISO19115-2](https://www.iso.org/obp/ui/#iso:std:iso:19115:-2:ed-2:v1:en)  
 
+### Minimum metadata fields
 
 ```{r, echo=FALSE, warning=FALSE, include=FALSE}
 library(tidyverse); library(knitr); library(kableExtra)
